# cpp-speed-test

./: README.md
atVSbrackets/: at.cpp  brackets.cpp  runAt  runBrackets
forEachVSfor/: for.cpp  forEach.cpp  runFor  runForEach
functionInFor/: functionInLoop.cpp  functionOutsideOfLoop.cpp  runFunctionInLoop  runFunctionOutsideLoop
more-structure/: CMakeLists.txt  main.cpp
more-structure/classes/: TestOne.cpp  TestTwo.cpp  TheTester.cpp
more-structure/include/: TestOne.h  TestTwo.h  TheTester.h
pointerInForEach/: runWithPointer  runWithoutPointer  withPointer.cpp  withoutPointer.cpp
pushBackVSbrackets/: brackets.cpp  pushBack.cpp  runBrackets  runPushBack
